fix wrapping archive links

--- a/cmsmc/static/css/main.css
+++ b/cmsmc/static/css/main.css
@@ -5,6 +5,7 @@
 
 main {
   padding-left: var(--page-margin);
+  margin-right: var(--page-margin);
 }
 
 .site-tagline {
@@ -24,7 +25,8 @@ ul.archive-list {
 }
 
 li.archive-list__entry {
-  line-height: 1.75;
+  line-height: 1.3;
+  margin-top: .4em;
 }
 
 li.archive-list__entry.newgroup {
@@ -35,7 +37,17 @@ li.archive-list__entry.newgroup:first-of-type {
   margin-top: inherit;
 }
 
-li.archive-list__entry span {
+
+a.archive-list__link {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+
+.archive-list__date {
+  flex-basis: 11ch;
+  flex-grow: 0;
+  flex-shrink: 0;
   display: inline-block;
   font-variant-numeric: tabular-nums;
   width: 11ch;
